Fix alignment on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,3 @@ html {
   padding: 0;
   margin: 0;
 }
-
-.extra-params{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
